--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -15,6 +15,7 @@ layout: default
       {%- if author -%}
         • <span itemprop="author" itemscope itemtype="http://schema.org/Person"><span class="p-author h-card" itemprop="name">{{ author }}</span></span>
       {%- endif -%}</p>
+   {% include analytics.html %}
   </header>
 
   <div class="share-links">
